--- a/paginas/filmes-series.html
+++ b/paginas/filmes-series.html
@@ -21,6 +21,7 @@
       </a>
       <nav>
         <ul class="center">
+          <li><a class="links" href="./login.html">Login</a></li>
           <li><a class="links" href="./conteudo.html">Conteúdos</a></li>
           <li>
             <a class="links" href="./experiencia-3d.html"
