--- a/paginas/quiz.html
+++ b/paginas/quiz.html
@@ -24,6 +24,7 @@
       </a>
       <nav>
         <ul class="center">
+          <li><a class="links" href="./login.html">Login</a></li>
           <li>
             <a class="links" href="../paginas/conteudo.html">Conteúdos</a>
           </li>
