--- a/paginas/sistemasolar.html
+++ b/paginas/sistemasolar.html
@@ -187,6 +187,7 @@
       </a>
       <nav>
         <ul class="center">
+          <li><a class="links" href="./login.html">Login</a></li>
           <li><a class="links" href="./conteudo.html">Conteúdos</a></li>
           <li>
             <a class="links" href="./experiencia-3d.html">Experiência 3D</a>
