adição da parte de conexão ao front

--- a/paginas/register.html
+++ b/paginas/register.html
@@ -64,6 +64,6 @@
       </div>
     </main>
 
-    <script src="register.js"></script>
+    <script src="register2.js"></script>
   </body>
 </html>
