adição de algumas funcionalidades

--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
                 Wesley Lopes - Coordenador do Curso Técnico em Informática e
                 professor de Inovações Tecnológicas
               </li>
+              <li>
+                Mayck Cipriano - Professor de Banco de Dados
+              </li>
             </ul>
           </div>
           <div class="feedback">
