--- a/paginas/ranking.html
+++ b/paginas/ranking.html
@@ -70,7 +70,7 @@
             />
           </div>
           <p class="name-rank">Player 1</p>
-          <span class="points-rank rankname-2">100 Pontos</span>
+          <span class="points-rank rankname-2">150 Pontos</span>
         </div>
         <div class="card-rank-big center-col">
           <div
@@ -100,7 +100,7 @@
             />
           </div>
           <p class="name-rank">Player 3</p>
-          <span class="points-rank rankname-3">150 Pontos</span>
+          <span class="points-rank rankname-3">100 Pontos</span>
         </div>
       </div>
       <div class="rank-list">
@@ -114,7 +114,7 @@
             />
           </div>
           <p class="name-rank">Player 4</p>
-          <span class="points-rank">120 Pontos</span>
+          <span class="points-rank">75 Pontos</span>
         </div>
         <div class="rank-item center">
           <span class="rank-number">5º</span>
@@ -126,7 +126,7 @@
             />
           </div>
           <p class="name-rank">Player 5</p>
-          <span class="points-rank">110 Pontos</span>
+          <span class="points-rank">70 Pontos</span>
         </div>
         <div class="rank-item center">
           <span class="rank-number">6º</span>
@@ -138,10 +138,10 @@
             />
           </div>
           <p class="name-rank">Player 6</p>
-          <span class="points-rank">110 Pontos</span>
+          <span class="points-rank">50 Pontos</span>
         </div>
         <div class="rank-item center">
-          <span class="rank-number">7º</span>
+          <span class="rank-number">25º</span>
           <div class="image-container">
             <img
               src="https://www.shareicon.net/data/512x512/2016/06/27/787154_people_512x512.png"
@@ -149,8 +149,8 @@
               class="image-rank"
             />
           </div>
-          <p class="name-rank">Player 7</p>
-          <span class="points-rank">110 Pontos</span>
+          <p class="name-rank">Você</p>
+          <span class="points-rank">10 Pontos</span>
         </div>
       </div>
     </main>
